Standardise way of creating Path objects.